--- a/templates/about.html
+++ b/templates/about.html
@@ -13,10 +13,6 @@
     <!-- intro section ends here -->
 
 
-
-
-
-
     <!-- plan section starts here -->
     <section class="plan-container">
       <h2 class="section-header">Why choose us?</h2>
@@ -39,9 +35,9 @@
       </p>
     </div>
     <div class="plan-image">
-      <img src="Mazda/imgs/CX-8-3.jpeg" alt="plan" />
-      <img src="Mazda/imgs/CX-9-1.jpg" alt="plan" />
-      <img src="Mazda/imgs/Axela1.jpeg" alt="plan" />
+      <img src="{{ url_for('static', filename='images/mazda/CX-8-3.jpeg') }}" alt="plan" />
+      <img src="{{ url_for('static', filename='images/mazda/CX-9-1.jpg') }}" alt="plan" />
+      <img src="{{ url_for('static', filename='images/mazda/Axela1.jpeg') }}" alt="plan" />
     </div>
     </div>
     </section>
