--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>User Login</h2>
+        <h2>Admin Login</h2>
         <form action="/login" method="post">
             <div class="form-group">
                 <label for="username">Username:</label>
