--- a/templates/toyota/toyota-auris.html
+++ b/templates/toyota/toyota-auris.html
@@ -1,8 +1,7 @@
-<!-- change made but not sure if working -->
-
 {% extends "base.html" %}
 
 {% block title %}Toyota Auris{% endblock %}
+{% block carstyle %}<link rel="stylesheet" href="{{ url_for('static', filename='css/car-page.css') }}">{% endblock %}
 
 {% block content %}
 <!-- intro section starts here -->
@@ -14,8 +13,6 @@
 <!-- intro section ends here -->
 
 
-
-
     <div class = "card-wrapper">
         <div class = "card">
 
@@ -23,31 +20,31 @@
           <div class = "product-imgs">
             <div class = "img-display">
               <div class = "img-showcase">
-                <img src = "imgs/Auris1.jpg" alt = "car image">
-                <img src = "imgs/Auris2.jpg" alt = "car image">
-                <img src = "imgs/Auris3.jpg" alt = "car image">
-                <img src = "imgs/Auris4.jpg" alt = "car image">
+                <img src = "{{ url_for('static', filename='images/toyota/Auris1.jpg') }}" alt = "car image">
+                <img src = "{{ url_for('static', filename='images/toyota/Auris2.jpg') }}" alt = "car image">
+                <img src = "{{ url_for('static', filename='images/toyota/Auris3.jpg') }}" alt = "car image">
+                <img src = "{{ url_for('static', filename='images/toyota/Auris4.jpg') }}" alt = "car image">
               </div>
             </div>
             <div class = "img-select">
               <div class = "img-item">
                 <a href = "#" data-id = "1">
-                  <img src = "imgs/Auris1.jpg" alt = "car image">
+                  <img src = "{{ url_for('static', filename='images/toyota/Auris1.jpg') }}" alt = "car image">
                 </a>
               </div>
               <div class = "img-item">
                 <a href = "#" data-id = "2">
-                  <img src = "imgs/Auris2.jpg" alt = "car image">
+                  <img src = "{{ url_for('static', filename='images/toyota/Auris2.jpg') }}" alt = "car image">
                 </a>
               </div>
               <div class = "img-item">
                 <a href = "#" data-id = "3">
-                  <img src = "imgs/Auris3.jpg" alt = "car image">
+                  <img src = "{{ url_for('static', filename='images/toyota/Auris3.jpg') }}" alt = "car image">
                 </a>
               </div>
               <div class = "img-item">
                 <a href = "#" data-id = "4">
-                  <img src = "imgs/Auris4.jpg" alt = "car image">
+                  <img src = "{{ url_for('static', filename='images/toyota/Auris4.jpg') }}" alt = "car image">
                 </a>
               </div>
             </div>
@@ -88,7 +85,7 @@
         </div>
     </div>
     <!-- right card section ends here -->
-       
+
     
 <!-- car description section starts here -->
 <section class="about-car">
@@ -119,11 +116,7 @@
        </div>
 </section>
 <!-- car description section ends here -->
-
    
-<script src="../image-slider.js"></script>
+<script src="{{ url_for('static', filename='js/image-slider.js') }}"></script>
 
-{& endblock &}
-
-</body>
-</html>
+{% endblock %}
