--- a/templates/toyota/toyota.html
+++ b/templates/toyota/toyota.html
@@ -22,182 +22,182 @@
     <div class="product-container">
 
         <div class="pro">
-            <a href="toyota-auris.html" target="_blank"><img class="producto" src="imgs/Auris1.jpg"></a>
+            <a href="/Toyota/toyota-auris.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/toyota/Auris1.jpg') }}"></a>
             <div class="description">
                 <span>Sedan</span>
                 <h5>TOYOTA AURIS</h5>
                 <div class="star">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
                 </div>
                 <h4>Ksh.7,000/day</h4>
             </div>
-            <div class="hire-icon-container"><a href="toyota-auris.html" target="_blank"><img class="hire-icon" src="imgs/Hire icon.png"></a></div>
+            <div class="hire-icon-container"><a href="/Toyota/toyota-auris.html" target="_blank"><img class="hire-icon" src="{{ url_for('static', filename='images/Hire icon.png') }}"></a></div>
         </div>
 
 
         <div class="pro">
-            <a href="toyota-axio.html" target="_blank"><img class="producto" src="imgs/Axio1.jpg"></a>
+            <a href="/Toyota/toyota-axio.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/toyota/Axio1.jpg') }}"></a>
             <div class="description">
                 <span>Sedan</span>
                 <h5>TOYOTA COROLLA AXIO</h5>
                 <div class="star">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
                 </div>
                 <h4>Ksh.15,000/day</h4>
             </div>
-            <div class="hire-icon-container"><a href="toyota-axio.html" target="_blank"><img class="hire-icon" src="imgs/Hire icon.png"></a></div>
+            <div class="hire-icon-container"><a href="/Toyota/toyota-axio.html" target="_blank"><img class="hire-icon" src="{{ url_for('static', filename='images/Hire icon.png') }}"></a></div>
         </div>
 
 
         <div class="pro">
-            <a href="toyota-fielder.html" target="_blank"><img class="producto" src="imgs/Fielder1.jpg"></a>
+            <a href="/Toyota/toyota-fielder.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/toyota/Fielder1.jpg') }}"></a>
             <div class="description">
                 <span>SUV</span>
                 <h5>TOYOTA FIELDER</h5>
                 <div class="star">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
                 </div>
                 <h4>Ksh.25,000/day</h4>
             </div>
-            <div class="hire-icon-container"><a href="toyota-fielder.html" target="_blank"><img class="hire-icon" src="imgs/Hire icon.png"></a></div>
+            <div class="hire-icon-container"><a href="/Toyota/toyota-fielder.html" target="_blank"><img class="hire-icon" src="{{ url_for('static', filename='images/Hire icon.png') }}"></a></div>
         </div>
 
 
         <div class="pro">
-            <a href="toyota-harrier.html" target="_blank"><img class="producto" src="imgs/Harrier1.jpg"></a>
+            <a href="/Toyota/toyota-harrier.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/toyota/Harrier1.jpg') }}"></a>
             <div class="description">
                 <span>SUV</span>
                 <h5>TOYOTA HARRIER</h5>
                 <div class="star">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
                 </div>
                 <h4>Ksh.30,000/day</h4>
             </div>
-            <div class="hire-icon-container"><a href="toyota-harrier.html" target="_blank"><img class="hire-icon" src="imgs/Hire icon.png"></a></div>
+            <div class="hire-icon-container"><a href="/Toyota/toyota-harrier.html" target="_blank"><img class="hire-icon" src="{{ url_for('static', filename='images/Hire icon.png') }}"></a></div>
         </div>
 
 
         <div class="pro">
-            <a href="toyota-noah.html" target="_blank"><img class="producto" src="imgs/Noah1.jpg"></a>
+            <a href="/Toyota/toyota-noah.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/toyota/Noah1.jpg') }}"></a>
             <div class="description">
                 <span>Crossover</span>
                 <h5>TOYOTA NOAH</h5>
                 <div class="star">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
                 </div>
                 <h4>Ksh.7,000/day</h4>
             </div>
-            <div class="hire-icon-container"><a href="toyota-noah.html" target="_blank"><img class="hire-icon" src="imgs/Hire icon.png"></a></div>
+            <div class="hire-icon-container"><a href="/Toyota/toyota-noah.html" target="_blank"><img class="hire-icon" src="{{ url_for('static', filename='images/Hire icon.png') }}"></a></div>
         </div>
 
 
         <div class="pro">
-            <a href="toyota-passo.html" target="_blank"><img class="producto" src="imgs/Passo1.jpg"></a>
+            <a href="/Toyota/toyota-passo.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/toyota/Passo1.jpg') }}"></a>
             <div class="description">
                 <span>Sedan</span>
                 <h5>TOYOTA PASSO</h5>
                 <div class="star">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
                 </div>
                 <h4>Ksh7,000/day</h4>
             </div>
-            <div class="hire-icon-container"><a href="toyota-passo.html" target="_blank"><img class="hire-icon" src="imgs/Hire icon.png"></a></div>
+            <div class="hire-icon-container"><a href="/Toyota/toyota-passo.html" target="_blank"><img class="hire-icon" src="{{ url_for('static', filename='images/Hire icon.png') }}"></a></div>
         </div>
 
 
         <div class="pro">
-            <a href="toyota-premio.html" target="_blank"><img class="producto" src="imgs/Premio1.jpg"></a>
+            <a href="/Toyota/toyota-premio.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/toyota/Premio1.jpg') }}"></a>
             <div class="description">
                 <span>SUV</span>
                 <h5>TOYOTA PREMIO</h5>
                 <div class="star">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
                 </div>
                 <h4>Ksh.10,000/day</h4>
             </div>
-            <div class="hire-icon-container"><a href="toyota-premio.html" target="_blank"><img class="hire-icon" src="imgs/Hire icon.png"></a></div>
+            <div class="hire-icon-container"><a href="/Toyota/toyota-premio.html" target="_blank"><img class="hire-icon" src="{{ url_for('static', filename='images/Hire icon.png') }}"></a></div>
         </div>
 
 
         <div class="pro">
-            <a href="toyota-roomy.html" target="_blank"><img class="producto" src="imgs/Roomy1.jpg"></a>
+            <a href="/Toyota/toyota-roomy.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/toyota/Roomy1.jpg') }}"></a>
             <div class="description">
                 <span>Crossover</span>
                 <h5>TOYOTA ROOMY</h5>
                 <div class="star">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
                 </div>
                 <h4>Ksh.7,000/day</h4>
             </div>
-            <div class="hire-icon-container"><a href="toyota-roomy.html" target="_blank"><img class="hire-icon" src="imgs/Hire icon.png"></a></div>
+            <div class="hire-icon-container"><a href="/Toyota/toyota-roomy.html" target="_blank"><img class="hire-icon" src="{{ url_for('static', filename='images/Hire icon.png') }}"></a></div>
         </div>
 
 
         <div class="pro">
-            <a href="toyota-vitz.html" target="_blank"><img class="producto" src="imgs/Vitz1.jpg"></a>
+            <a href="/Toyota/toyota-vitz.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/toyota/Vitz1.jpg') }}"></a>
             <div class="description">
                 <span>Sedan</span>
                 <h5>TOYOTA VITZ</h5>
                 <div class="star">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
                 </div>
-                <h4>Ksh.7,000/day</h4>
+                <h4>Ksh.5,000/day</h4>
             </div>
-            <div class="hire-icon-container"><a href="toyota-vitz.html" target="_blank"><img class="hire-icon" src="imgs/Hire icon.png"></a></div>
+            <div class="hire-icon-container"><a href="/Toyota/toyota-vitz.html" target="_blank"><img class="hire-icon" src="{{ url_for('static', filename='images/Hire icon.png') }}"></a></div>
         </div>
 
 
         <div class="pro">
-            <a href="toyota-tx.html" target="_blank"><img class="producto" src="imgs/TX1.jpg"></a>
+            <a href="/Toyota/toyota-tx.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/toyota/TX1.jpg') }}"></a>
             <div class="description">
                 <span>SUV</span>
                 <h5>TOYOTA LANDCRUISER PRADO TX</h5>
                 <div class="star">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
-                    <img class="star-icon" src="imgs/star.png">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
+                    <img class="star-icon" src="{{ url_for('static', filename='images/star.png') }}">
                 </div>
                 <h4>Ksh.30,000/day</h4>
             </div>
-            <div class="hire-icon-container"><a href="toyota-tx.html" target="_blank"><img class="hire-icon" src="imgs/Hire icon.png"></a></div>
+            <div class="hire-icon-container"><a href="/Toyota/toyota-tx.html" target="_blank"><img class="hire-icon" src="{{ url_for('static', filename='images/Hire icon.png') }}"></a></div>
         </div>
 
 
@@ -227,7 +227,7 @@ body {
 /* intro section starts here */
 .about-bg{
     height: 60vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(imgs/Atenza1.png);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(img{{ url_for('static', filename='images/star.png') }});
     background-position: 50% 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
