--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Car Rental System - Admin Login</title>
+    <title>Car Hire - Admin Login</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,6 +21,11 @@
 
         .form-group {
             margin-bottom: 20px;
+        }
+
+        .bform-group {
+            margin-bottom: 20px;
+            text-align: center;
         }
 
         label {
@@ -47,22 +52,21 @@
 <body>
     <div class="login-container">
         <h2>Admin Login</h2>
-        <form action="/login" method="post">
+        <form action="/adminlogin" method="post">
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="admin_uname" required autofocus>
             </div>
 
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="admin_passwd" required>
             </div>
 
-            <div class="form-group">
+            <div class="bform-group">
                 <button type="submit">Login</button>
             </div>
         </form>
     </div>
 </body>
 </html>
-
