--- a/templates/contact.html
+++ b/templates/contact.html
@@ -38,14 +38,14 @@
         <div class = "contact-form">
           <form>
             <div>
-              <input type = "text" class = "form-control" placeholder="First Name">
-              <input type = "text" class = "form-control" placeholder="Last Name">
+              <input type = "text" class = "form-control" placeholder="First Name" required autofocus>
+              <input type = "text" class = "form-control" placeholder="Last Name" required>
             </div>
             <div>
-              <input type = "email" class = "form-control" placeholder="E-mail">
-              <input type = "text" class = "form-control" placeholder="Phone">
+              <input type = "email" class = "form-control" placeholder="E-mail" required>
+              <input type = "text" class = "form-control" placeholder="Phone" required>
             </div>
-            <textarea rows = "5" placeholder="Message" class = "form-control"></textarea>
+            <textarea rows = "5" placeholder="Message" class = "form-control" required></textarea>
             <input type = "submit" class = "send-btn" value = "send message">
           </form>
           <div>
