--- a/static/css/header-footer.css
+++ b/static/css/header-footer.css
@@ -1,4 +1,29 @@
 /* header css for all the pages */
+.flash-message {
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.flash-success {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+}
+
+.flash-error {
+  background-color: #f8d7da;
+  color: red;
+  border: 1px solid #f5c6cb;
+}
+
+.flash-warning {
+  background-color: #fff3cd;
+  color: #856404;
+  border: 1px solid #ffeeba;
+}
+
 header {
     position: fixed;
     width: 100%;
@@ -84,6 +109,19 @@ header {
     border-radius: 3px;
     cursor: pointer;
     transition: 0.15s ease;
+}
+
+.logout-btn{
+  border: none;
+  outline: none;
+  background: #eb2f06;
+  color: #ffffff;
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 10px 18px;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: 0.15s ease;
 }
 
 .navbar .login-btn:hover {
